--- a/SportUp/OnboardingViewController.storyboard
+++ b/SportUp/OnboardingViewController.storyboard
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GEF-oF-z8J" customClass="GoButton" customModule="SportUp" customModuleProvider="target">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GEF-oF-z8J" customClass="GoButton" customModule="SportUp" customModuleProvider="target">
                                 <rect key="frame" x="112" y="571" width="150" height="46"/>
                                 <color key="backgroundColor" red="0.1946057081" green="0.8000642657" blue="0.87262988090000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -29,7 +29,7 @@
                                     <constraint firstAttribute="height" constant="46" id="y3G-f2-4Ov"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Найти игру"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="defaultBackgroundColor">
                                         <color key="value" red="0.19460570812225342" green="0.80006426572799683" blue="0.87262988090515137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -38,6 +38,9 @@
                                         <real key="value" value="23"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="beginButtonDidTap:" destination="U1Q-ve-Y5x" eventType="touchUpInside" id="OsU-zV-Za9"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="Uk6-MD-wkR">
                                 <rect key="frame" x="-0.5" y="145.5" width="375" height="375"/>
@@ -51,6 +54,9 @@
                             <constraint firstItem="Uk6-MD-wkR" firstAttribute="centerY" secondItem="a75-JQ-Y48" secondAttribute="centerY" id="rmD-gU-Vh0"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="beginButton" destination="GEF-oF-z8J" id="UeG-Kh-zCq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VcX-p3-Rro" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
