--- a/SportUp/Base.lproj/RootViewController.storyboard
+++ b/SportUp/Base.lproj/RootViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="MNB-6q-Adh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="OFc-of-jqi">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,17 +10,22 @@
     </dependencies>
     <scenes>
         <!--Root View Controller-->
-        <scene sceneID="gO9-HY-n26">
+        <scene sceneID="sgR-bU-4YE">
             <objects>
-                <navigationController navigationBarHidden="YES" id="MNB-6q-Adh" customClass="RootViewController" customModule="SportUp" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="0kX-px-TNJ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nZf-QJ-0hE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="OFc-of-jqi" customClass="RootViewController" customModule="SportUp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gZm-FP-Btm"/>
+                        <viewControllerLayoutGuide type="bottom" id="1xa-6s-ZML"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NcJ-Sw-GGc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7bz-sL-1FE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-178" y="-146"/>
+            <point key="canvasLocation" x="-232" y="138"/>
         </scene>
     </scenes>
 </document>
