Sport types screen: server

--- a/SportUp/SportTypesViewController.storyboard
+++ b/SportUp/SportTypesViewController.storyboard
@@ -10,20 +10,21 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Categories View Controller-->
+        <!--Выберите вид спорта-->
         <scene sceneID="fq7-eU-NcU">
             <objects>
-                <tableViewController id="swf-HI-16n" customClass="CategoriesViewController" customModule="SportUp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Выберите вид спорта" id="swf-HI-16n" customClass="SportTypesViewController" customModule="SportUp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="72" sectionHeaderHeight="28" sectionFooterHeight="28" id="4ox-Hp-E5w">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.96830016374588013" green="0.9764898419380188" blue="0.98052781820297241" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryTableViewCell" id="emn-pg-ACW" customClass="CategoryTableViewCell" customModule="SportUp" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SportTypeTableViewCell" id="emn-pg-ACW" customClass="SportTypeTableViewCell" customModule="SportUp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="72"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="emn-pg-ACW" id="Iue-Bi-wkN">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="71.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="71"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xkh-OF-s1v">
@@ -34,7 +35,7 @@
                                             </constraints>
                                         </imageView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B0A-WV-QVC">
-                                            <rect key="frame" x="76" y="15.5" width="289" height="40.5"/>
+                                            <rect key="frame" x="76" y="15" width="289" height="41"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вид спорта" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iI2-w8-mfR">
                                                     <rect key="frame" x="0.0" y="0.0" width="289" height="21"/>
@@ -43,7 +44,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 игр  -  0 площадок" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sQX-zz-MX0">
-                                                    <rect key="frame" x="0.0" y="26" width="289" height="14.5"/>
+                                                    <rect key="frame" x="0.0" y="26" width="289" height="15"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                     <color key="textColor" red="0.56231915950775146" green="0.63869673013687134" blue="0.68471544981002808" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -62,6 +63,7 @@
                                             <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                         </view>
                                     </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstItem="Xkh-OF-s1v" firstAttribute="leading" secondItem="Iue-Bi-wkN" secondAttribute="leading" constant="22" id="N0q-0L-3eU"/>
                                         <constraint firstItem="B0A-WV-QVC" firstAttribute="centerY" secondItem="Iue-Bi-wkN" secondAttribute="centerY" id="WWt-Ef-1m1"/>
@@ -71,6 +73,7 @@
                                     </constraints>
                                     <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="10"/>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="categoryIconView" destination="Xkh-OF-s1v" id="gmQ-nH-gFF"/>
                                     <outlet property="descriptionLabel" destination="sQX-zz-MX0" id="ofq-a2-vfJ"/>
