--- a/SportUp/GamesMapViewController.storyboard
+++ b/SportUp/GamesMapViewController.storyboard
@@ -26,6 +26,24 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J4h-wY-FH2">
+                                <rect key="frame" x="291" y="443" width="52" height="52"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="0eZ-rx-iSN"/>
+                                    <constraint firstAttribute="width" constant="52" id="5xv-1O-q3p"/>
+                                </constraints>
+                                <state key="normal" image="iconLocationpointBlack"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="26"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="navigationButtonDidTap:" destination="5wm-tc-hla" eventType="touchUpInside" id="rlS-Wv-eVr"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="73v-w9-LC1">
                                 <rect key="frame" x="0.0" y="527" width="375" height="140"/>
                                 <subviews>
@@ -51,7 +69,7 @@
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GSP-mw-vlA">
-                                        <rect key="frame" x="20" y="63" width="355" height="16"/>
+                                        <rect key="frame" x="20" y="63.5" width="355" height="16"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconPlayerssmollGray" translatesAutoresizingMaskIntoConstraints="NO" id="n5P-d0-QCZ">
                                                 <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
@@ -108,7 +126,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eFY-xb-PVv">
-                                        <rect key="frame" x="167.5" y="0.0" width="40" height="20"/>
+                                        <rect key="frame" x="168" y="0.0" width="40" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="kDa-KR-EUf"/>
                                             <constraint firstAttribute="height" constant="20" id="pI8-jp-wwO"/>
@@ -148,8 +166,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="J4h-wY-FH2" secondAttribute="trailing" constant="32" id="5Gm-Hc-nnQ"/>
                             <constraint firstAttribute="trailing" secondItem="4H8-Sq-fqX" secondAttribute="trailing" id="8QO-6u-1Av"/>
                             <constraint firstItem="sFQ-MZ-e3c" firstAttribute="top" secondItem="73v-w9-LC1" secondAttribute="bottom" id="BPt-Ph-uc2"/>
+                            <constraint firstItem="73v-w9-LC1" firstAttribute="top" secondItem="J4h-wY-FH2" secondAttribute="bottom" constant="32" id="CRM-5R-brC"/>
                             <constraint firstItem="4H8-Sq-fqX" firstAttribute="top" secondItem="kmx-zu-0bb" secondAttribute="bottom" id="GGy-7N-Wlr"/>
                             <constraint firstAttribute="trailing" secondItem="73v-w9-LC1" secondAttribute="trailing" id="K9H-sC-fm8"/>
                             <constraint firstItem="73v-w9-LC1" firstAttribute="leading" secondItem="wT7-84-r0a" secondAttribute="leading" id="P5O-5e-cNU"/>
@@ -184,6 +204,7 @@
     </scenes>
     <resources>
         <image name="iconArrdownGray" width="12" height="12"/>
+        <image name="iconLocationpointBlack" width="24" height="24"/>
         <image name="iconLocationsmollGray" width="16" height="16"/>
         <image name="iconLock" width="24" height="24"/>
         <image name="iconPlayerssmollGray" width="16" height="16"/>
